samples/_failures_safe/1761077167_fab621_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5f64091.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_c5f64091.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
